<resources>
    <string name="app_name">Restaurant</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="food">Food</string>
    <string name="super_market">Super Market</string>
    <string name="custom_order">Custom Order</string>
    <string name="jobs">Jobs</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="fastfood">FastFood</string>
    <string name="restaurants">Restaurants</string>
    <string name="healthy">Healthy</string>
    <string name="desert">Desserts</string>
    <string name="drinks">Drinks</string>
    <string name="custom_jobs">Custom Jobs</string>
    <string name="pizzas">Pizzas</string>
    <string name="burger">Burger</string>
    <string name="namkeens">Namkeens</string>
    <string name="buy_anything">We can deliever anything from any store . Buy what you want.</string>
    <string name="pick_up_and_delievery_address"><![CDATA[Pick Up & delievery address]]></string>
    <string name="where_from">Where from</string>
    <string name="delievery_to">Delievery to</string>
    <string name="what_you_want">What is it you want to pick up</string>
    <string name="send_a_package">Send a package</string>
    <string name="pickup_package_from">Pick up package from</string>
    <string name="drop_off_package_address">Drop off package address</string>
    <string name="start_time_and_date">Start time and Date</string>
    <string name="time_and_date">Time and Date</string>
    <string name="your_contact_number">Your contact number</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="need_to_get">Need to get Something done quicly post here. Get ther washing from the aundretles.</string>
    <string name="delievery_details">Delievery details</string>
    <string name="pickup_from">Pickup from</string>
    <string name="drop_off_to">Drop off to</string>
    <string name="instruction">Instruction of job</string>
    <string name="your_name">Your name</string>
    <string name="your_chice_off">Your choice of</string>
    <string name="special_request">Special request</string>
    <string name="type_her">Type here...</string>
    <string name="add_to_cart">Add to cart</string>
</resources>
