<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">

    <FrameLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_weight="1"
      />
<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/_1sdp"
    android:visibility="gone"
    android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/home"
            android:padding="@dimen/_3sdp"
            android:drawableTop="@drawable/ic_home"
            android:textSize="@dimen/_7sdp"
            android:layout_weight="1"
            android:textColor="@color/black"/>
        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/tv_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/shop"
            android:padding="@dimen/_3sdp"
            android:drawableTop="@drawable/ic_shop"
            android:textSize="@dimen/_7sdp"
            android:layout_weight="1"
            android:textColor="@color/black"/>
        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/tv_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/food"
            android:padding="@dimen/_3sdp"
            android:drawableTop="@drawable/ic_food"
            android:textSize="@dimen/_7sdp"
            android:layout_weight="1"
            android:textColor="@color/black"/>
        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/tv_super_market"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/super_market"
            android:drawableTop="@drawable/ic_super_market"
            android:textSize="@dimen/_7sdp"
            android:singleLine="false"
            android:layout_weight="1"
            android:textColor="@color/black"/>
        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/tv_custom_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/custom_order"
            android:drawableTop="@drawable/ic_order"
            android:textSize="@dimen/_7sdp"
            android:singleLine="false"
            android:layout_weight="1"
            android:textColor="@color/black"/>
        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/tv_jobs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/jobs"
            android:drawableTop="@drawable/ic_jobs"
            android:textSize="@dimen/_7sdp"
            android:singleLine="false"
            android:layout_weight="1"
            android:textColor="@color/black"/>


    </LinearLayout>

</LinearLayout>