<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_topbar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_right_arrow"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/dummy_image"
                android:scaleType="centerCrop"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mr Danner"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:singleLine="true"/>
                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="A new danner with chef's special sauces and chilli peper, capcium with turmeric masala."
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/_12sdp"
                    android:maxLines="2"
                    android:singleLine="false"/>

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="£ 36"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/_15sdp"
                    android:singleLine="true"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_chice_of"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_chice_off"
                android:textStyle="bold"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:maxLines="2"
                android:singleLine="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Saj"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="£ 2.00"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Biliny"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="£ 3.00"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="false"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tanini Sauce"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="£ 2.00"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="false"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Garlic Sauce"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="£ 2.00"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="false"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/special_request"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_16sdp"
                android:maxLines="1"
                android:singleLine="false"/>

            <EditText
                android:id="@+id/et_type_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:maxLines="3"
                android:hint="@string/type_her"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <ImageView
                android:id="@+id/iv_minus"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/ic_remove"
                    android:layout_gravity="center_vertical"
                android:padding="@dimen/_3sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:textSize="@dimen/_16sdp"
                    android:maxLines="1"
                    android:singleLine="false"/>
                <ImageView
                    android:id="@+id/iv_plus"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_add"
                    android:padding="@dimen/_3sdp"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/add_to_cart"
                android:background="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_margin="@dimen/_10sdp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>